fix jumbotron overlapping in mobile

--- a/assets/stylesheets/bootstrap/_variables.scss
+++ b/assets/stylesheets/bootstrap/_variables.scss
@@ -27,7 +27,7 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               $gray-base !default;
+$body-bg:               $gray-darker !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-base !default;
 
